# pytopaint-pyside

./: .gitignore  .swp  PytoPaint.spec  README.md  pyproject.toml
pytopaint/: __main__.py  actions.py  analysis.py  colors.py  config.py  flowdata.py  io.py  layout.py  main.py  paths.py  selection.py  shortcuts.py
pytopaint/resources/: config.yml  panels.yml
pytopaint/resources/layouts/: AML.yml  B.yml  BMS.yml  MF.yml  MMIC.yml  MPO.yml  PNH RBC.yml  PNH WBC.yml  T.yml  TdT.yml  VS38c.yml
pytopaint/widgets/: biplot.py  biplotgrid.py  colorbar.py  dialogs.py  immunophenotyper.py  painter.py  paintertabs.py  palette.py  reportgenerator.py  zoomplot.py
tests/: test_color.py  test_flowdata.py  test_immunophenotyper.py  test_io.py  test_layout.py  test_reportgenerator.py  test_selection.py
tests/resources/: normal_01_B.fcs
tests/resources/layouts/: test.yml
