[project]
name = "pytopaint-pyside"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flowkit>=1.3.2",
    "geopandas>=1.1.3",
    "polars>=1.40.1",
    "pyside6>=6.11.0",
]


[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]
